k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covara-redis
  labels:
    app: covara-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covara-redis
  template:
    metadata:
      labels:
        app: covara-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: covara-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
